# gradio_demo_nutrition

./: README.md  app.py  csv_converter.py  main.py  pyproject.toml  requirements.txt  test.ipynb
data/: nutrition_data.db  국가표준식품성분 Database 10.3-표 1.csv
