[project]
name = "gradio-demo-test"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gradio>=5.34.2",
    "langchain>=0.3.25",
    "langchain-openai>=0.3.21",
    "langchain-community>=0.3.24",
    "langgraph>=0.4.8",
    "python-dotenv>=1.1.0",
    "pypdf>=6.0.0",
    "langchain-chroma>=0.2.5",
    "langchain-huggingface>=0.3.1",
    "sentence-transformers>=5.1.0",
    "tavily-python>=0.7.11",
]
